force-app/main/default/objects/Lead/fields/Do_Not_Send_Mailer__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Send_Mailer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If returned to sender/requested, do not send future mailers.</description>
    <inlineHelpText>Check this box if the prospect requested to no longer receive mailers or the mailer was returned</inlineHelpText>
    <label>Do Not Send Mailer</label>
    <type>Checkbox</type>
</CustomField>