force-app/main/default/objects/Lead/fields/Equipment_Interests__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Interests__c</fullName>
    <label>Equipment Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk Material Handling</fullName>
            </value>
            <value>
                <fullName>Compressors</fullName>
            </value>
            <value>
                <fullName>Drying &amp; Cooling</fullName>
            </value>
            <value>
                <fullName>Mixers</fullName>
            </value>
            <value>
                <fullName>Pumps</fullName>
            </value>
            <value>
                <fullName>Sanitary Conveying</fullName>
            </value>
            <value>
                <fullName>Screening Machines</fullName>
            </value>
            <value>
                <fullName>Separation</fullName>
            </value>
            <value>
                <fullName>Sizers</fullName>
            </value>
            <value>
                <fullName>Sorting Equipment</fullName>
            </value>
            <value>
                <fullName>Valves</fullName>
            </value>
            <value>
                <fullName>Wear Resistance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>