force-app/main/default/objects/Lead/fields/InactiveDays__c.field-meta.xml
<CustomField>
    <fullName>InactiveDays__c</fullName>
    <description>Calculates the time since this lead was created and not converted</description>
    <formula>NOW() - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time since the lead was created</inlineHelpText>
    <label>Inactive Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>