force-app/main/default/objects/Lead/fields/Lead_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Lead_Next_Step__c</fullName>
    <label>Lead Next Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>