force-app/main/default/objects/Lead/fields/MassManager__ProductInterest__c.field-meta.xml
<CustomField>
    <fullName>MassManager__ProductInterest__c</fullName>
    <label>Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bulk Material Handling</fullName>
            </value>
            <value>
                <fullName>Compressors</fullName>
            </value>
            <value>
                <fullName>Heating &amp; Cooling Systems</fullName>
            </value>
            <value>
                <fullName>Mixers &amp; Agitators</fullName>
            </value>
            <value>
                <fullName>Pumps</fullName>
            </value>
            <value>
                <fullName>Sanitary Conveying</fullName>
            </value>
            <value>
                <fullName>Screening Machines</fullName>
            </value>
            <value>
                <fullName>Separation</fullName>
            </value>
            <value>
                <fullName>Sizers</fullName>
            </value>
            <value>
                <fullName>Sorting Systems</fullName>
            </value>
            <value>
                <fullName>Valves</fullName>
            </value>
            <value>
                <fullName>Wear Resistance</fullName>
            </value>
            <value>
                <fullName>Service &amp; Repairs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>