force-app/main/default/objects/Lead/fields/No_Potential_Explanation__c.field-meta.xml
<CustomField>
    <fullName>No_Potential_Explanation__c</fullName>
    <label>No Potential Explanation</label>
    <type>TextArea</type>
</CustomField>