force-app/main/default/objects/Lead/fields/Reason_for_contact__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_contact__c</fullName>
    <description>The selection chosen on the website form will populate here.</description>
    <label>Reason for contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request Quote</fullName>
            </value>
            <value>
                <fullName>Equipment Inquiry</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>