force-app/main/default/objects/Lead/validationRules/LEA001_No_Potential_Explanation_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>LEA001_No_Potential_Explanation_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status , &quot;No Potential&quot;),
ISBLANK( No_Potential_Explanation__c )
)</errorConditionFormula>
    <errorDisplayField>No_Potential_Explanation__c</errorDisplayField>
    <errorMessage>Error LEA001
You must provide a reason for marking the lead as No Potential.</errorMessage>
</ValidationRule>