force-app/main/default/objects/Lead/listViews/Environmental_Campaign.listView-meta.xml
<ListView>
    <fullName>Environmental_Campaign</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.COMPANY</field>
        <operation>equals</operation>
        <value>Travita,Clean Harbors,Terapure,Secure Energy,Brenntag,Quadra,Kaliber,Novamen,BNC,Cleartech,Univar,Nalco,Hexion,Guardian and Nova Brenntag,Celanese</value>
    </filters>
    <label>Environmental Campaign</label>
</ListView>