force-app/main/default/objects/Lead/listViews/Last30DaysLeads.listView-meta.xml
<ListView>
    <fullName>Last30DaysLeads</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STREET</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.ZIP</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>New Leads</label>
    <sharedTo>
        <group>InsideSales</group>
    </sharedTo>
</ListView>