force-app/main/default/objects/Lead/listViews/Leads_SP.listView-meta.xml
<ListView>
    <fullName>Leads_SP</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.INDUSTRY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>SP</value>
    </filters>
    <label>Leads - SP</label>
</ListView>