force-app/main/default/objects/Lead/listViews/MS_Leads.listView-meta.xml
<ListView>
    <fullName>MS_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>MS</value>
    </filters>
    <label>Leads - MS</label>
</ListView>