force-app/main/default/objects/Lead/listViews/Unqualified_Leads.listView-meta.xml
<ListView>
    <fullName>Unqualified_Leads</fullName>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>No Potential</value>
    </filters>
    <label>Lead Status - Unqualified</label>
</ListView>